# rust-service-scaffold

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  all_code.txt  cargo-generate.toml  docker-compose.yml  test_telemetry.rs
.cargo/: audit.toml
.github/workflows/: ci.yml
.sqlx/: query-a4f96e853862a15f6c91c2c5e51f32af223c5b3516eac6f065ca287ec8bad173.json
app/: Cargo.toml
app/src/: app.rs  config.rs  lib.rs  main.rs  shutdown.rs  state.rs
app/tests/: integration_test.rs
bootstrap/: Cargo.toml
bootstrap/src/: app.rs  config.rs  factory.rs  lib.rs  main.rs  state.rs
bootstrap/tests/: integration_test.rs
bootstrap/tests/common/: mod.rs
config/: default.toml  development.toml  production.toml
crates/application/: Cargo.toml
crates/application/src/: container.rs  error.rs  id_service.rs  lib.rs  ports.rs
crates/application/src/use_cases/: create_user.rs  create_user_test.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: adapters.rs  error.rs  lib.rs  ports.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  id.rs  lib.rs  ports.rs  user.rs
crates/infra_db_postgres/: Cargo.toml
crates/infra_db_postgres/migrations/: 20250629142342_create_users.sql
crates/infra_db_postgres/src/: error.rs  lib.rs  models.rs  user_repo.rs
crates/infra_telemetry/: Cargo.toml
crates/infra_telemetry/src/: config.rs  error.rs  lib.rs  metrics.rs  metrics_middleware.rs  telemetry.rs
docs/: CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md
docs/01_architecture/: tech_architecture_v1.md
docs/01_architecture/designs/: D01_rust_service_template.md
hooks/: post_gen_hook.sh
presentation/pres_web_axum/: Cargo.toml  build.rs
presentation/pres_web_axum/src/: dtos.rs  error.rs  handlers.rs  lib.rs  metrics_middleware.rs
presentation/pres_web_axum/src/dtos/: request.rs  response.rs
presentation/pres_web_axum/src/handlers/: health.rs  main.rs  mod.rs  user.rs
presentation/pres_web_axum/src/middleware/: mod.rs  telemetry_middleware.rs
scripts/: dev.sh  quality-check.sh  test.sh
src/: app.rs  config.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs  telemetry.rs
src/application/: mod.rs
src/config/: default.toml
src/domain/: error.rs
src/infrastructure/: error.rs  mod.rs  telemetry.rs
src/infrastructure/web/: handlers.rs  metrics.rs  mod.rs
src/infrastructure/web/middleware/: auth.rs
test_telemetry/: Cargo.toml
test_telemetry/src/: main.rs
tests/: integration_test.rs
