[package]
name = "axum-logging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry", "fmt"] }
tower-http = { version = "0.5.2", features = ["request-id", "trace", "fs"] }
opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic"] }
opentelemetry-prometheus = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
tracing-opentelemetry = "0.23.0"
prometheus = { version = "0.13.3", features = ["process"] }
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.20", features = ["json"] } # Assuming this version is fine, not specified in requirements
serde_json = "1.0.115" # Matching the version in dependencies as per common practice, though not explicitly requested for dev.
hyper = "1.6.0" # Assuming this version is fine, not specified in requirements
tower = { version = "0.4.13", features = ["util"] }
