[package]
name = "axum-logging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"

tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry", "fmt"] }
tower-http = { version = "0.5.2", features = ["request-id", "trace", "fs"] }
opentelemetry = { version = "0.28.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = [
    "rt-tokio",      # 啟用 Tokio 運行時支持
    "trace",         # 啟用完整的追蹤功能
    "metrics",       # 啟用完整的指標功能
] }
opentelemetry-otlp = { version = "0.28.0", features = [
    "tonic",         # 使用 tonic 作為 gRPC 客戶端
    "trace",         # 啟用 OTLP 的追蹤匯出功能
] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry-prometheus = "0.28.0"
tracing-opentelemetry = "0.29.0"
prometheus = { version = "0.13.3", features = ["process"] }
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }

[dependencies.axum-prometheus]
version = "0.7.0"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.20", features = ["json"] } # Assuming this version is fine, not specified in requirements
serde_json = "1.0.115" # Matching the version in dependencies as per common practice, though not explicitly requested for dev.
hyper = "1.6.0" # Assuming this version is fine, not specified in requirements
tower = { version = "0.4.13", features = ["util"] }
tracing-futures = "0.2"
once_cell = "1.19.0"

[build-dependencies]
# ✅ [新增] vergen for build-time info
vergen = { version = "8", features = ["build", "git", "gitcl"] }