[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Main binary crate for Axum Hexagonal Template."
license = "MIT OR Apache-2.0"

[dependencies]
# === 自家 Workspace Crates ===
contracts = { path = "../crates/contracts" }
application = { path = "../crates/application" }
domain = { path = "../crates/domain" }
infra_db_postgres = { path = "../crates/infra_db_postgres" }
infra_telemetry = { path = "../crates/infra_telemetry" }
pres_web_axum = { path = "../presentation/pres_web_axum" }

# === 公用 Library（會自動統一至 workspace 版本）===
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
tracing-futures = { workspace = true }

# 只在 binary 需要才額外寫明
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }
async-trait = { workspace = true } 

[build-dependencies]
vergen = { workspace = true }
