# axum_hexagonal_template/crates/application/Cargo.toml

[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]                                                     # <-- 請修改為你的資訊
description = "Contains application services (use cases) and defines ports (traits) for the domain."
license = "MIT OR Apache-2.0"                                                                        # 或者你選擇的許可證

[dependencies]
contracts = { path = "../contracts" } # 依賴於 contracts 層，這是 Application 層唯一會直接依賴的抽象層
# 依賴於 Domain 層，這是 Application 層唯一會直接依賴的業務邏輯層
domain = { path = "../domain" }


# 用於異步 trait，使我們可以在 trait 方法中使用 async
# async-trait = { workspace = true } # 使用最新的穩定版本

# 錯誤處理庫，用於定義應用層的錯誤
thiserror = { workspace = true }

# 用於 DTOs 的驗證，如果你的 application/dto.rs 中有使用
validator = { workspace = true } # 使用最新的穩定版本，並啟用 derive 功能

# 可選：如果應用層有需要日誌，這裡可以使用 tracing 門面，但不要包含 tracing-subscriber
# tracing = "0.1.40"
