[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
prometheus = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
mockall = { workspace = true, optional = true }

[features]
default = []
testing = ["mockall"]
